# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "toktx"
version = "0.1.0"
edition = "2021"
rust-version = "1.60.0"
authors = [
  "Alorel <amolc@pm.me>",
]
license = "Apache-2.0"
readme = "README.md"
description = "Programmatic access to the toktx CLI tool"
repository = "https://github.com/Alorel/toktx-rs"
keywords = ["toktx", "ktx2", "convert", "ktx"]
categories = ["multimedia::images"]

[features]
serde = ["dep:serde"]
async = []
tokio = ["argley/tokio", "dep:tokio", "async"]
async-std = ["argley/async-std", "dep:async-std", "async"]

[dependencies]
argley = {version = "1.1.2", path = "../argley"}
cfg-if = "1"
const-default = {version = "1", features = ["derive"], default-features = false}
delegate-display = "1.0.8"
derive_more = {version = "0.99.17", features = ["into", "from", "deref", "deref_mut"], default-features = false}
serde = {version = "1", features = ["derive"], optional = true}
strum = {version = "0.24.1", features = ["derive"]}
thiserror = "1.0.40"
uuid = {version = "1.3", default-features = false, features = ["v4"]}

tokio = {version = "1", features = ["process"], optional = true, default-features = false}
async-std = {version = "1", features = ["unstable"], optional = true, default-features = false}

[dev-dependencies]
anyhow = "1.0.71"
once_cell = "1.18"

tokio = {version = "1", features = ["fs", "rt", "macros"], default-features = false}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "doc_cfg",
]
